tests/machine/x/rust/map_index.error
exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/map_index.rs:4:32
  |
4 |     println!("{:?}", m.clone()["b" as usize]);
  |                                ^^^^^^^^^^^^ expected `&_`, found `usize`
  |
  = note: expected reference `&_`
                  found type `usize`
help: consider borrowing here
  |
4 |     println!("{:?}", m.clone()[&("b" as usize)]);
  |                                ++            +

error[E0606]: casting `&'static str` as `usize` is invalid
 --> /workspace/mochi/tests/machine/x/rust/map_index.rs:4:32
  |
4 |     println!("{:?}", m.clone()["b" as usize]);
  |                                ^^^^^^^^^^^^
  |
  = help: cast through a raw pointer first

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0606.
For more information about an error, try `rustc --explain E0308`.
